--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name = "nofwl"
 version = "0.1.0"
 edition = "2021"
 description = "NoFWL Desktop Application"
-authors = ["lencx <cxin1314@gmail.com>"]
-homepage = "https://github.com/lencx/nofwl"
-repository = "https://github.com/lencx/nofwl"
+authors = ["rayisaninja <ray@rayisa.ninja>"]
+homepage = "https://github.com/rayisaninja/nofwl"
+repository = "https://github.com/rayisaninja/nofwl"
 keywords = ["desktop", "plugins", "tauri"]
 license = "GPL-3.0"
 
